# desktop-ai

./: .gitignore  LICENSE  README.md  desktop-ai-分析报告.docx  综合评估报告.txt
.github/workflows/: ci.yml
V5.2/: Cargo.toml  README.md
V5.2/src/: api_server.rs  config.rs  inference.rs  main.rs  markdown.rs  search.rs
desktop-ai/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
desktop-ai/src/: api_server.rs  chunker.rs  cleaner.rs  config.rs  conversation.rs  crawler.rs  downloader.rs  embedding.rs  ffi.rs  inference.rs  lib.rs  main.rs  markdown.rs  model_catalog.rs  sandbox.rs  search.rs  vector_store.rs
desktop-ai/src/app/: chat.rs  kb_panel.rs  mod.rs  model_select.rs  settings.rs  sidebar.rs
desktop-ai/tests/: integration.rs
release/: README.md
v2_python/: build.bat  config.json  gui.py  main.py  model.py  requirements.txt
v2_python/assets/: 关于图标.txt
v3_rust/: Cargo.toml  build.rs  llama.lib
v3_rust/src/: api_server.rs  app.rs  chunker.rs  cleaner.rs  config.rs  conversation.rs  crawler.rs  downloader.rs  embedding.rs  ffi.rs  inference.rs  main.rs  markdown.rs  model_catalog.rs  sandbox.rs  vector_store.rs
