[package]
name = "desktop-ai"
version = "5.2.0"
edition = "2021"
description = "妗岄潰AI - 鏈湴澶фā鍨嬭亰澶╁簲鐢?(API鏈嶅姟 + 鎼滅储)"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "stream"] }
directories = "6"
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.12"
libloading = "0.8"
once_cell = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_System_SystemInformation"] }

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
panic = "abort"

