[package]
name = "desktop-ai"
version = "5.8.0"
edition = "2021"
description = "桌面AI - 本地大模型聊天应用 (RAG知识库)"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
directories = "6"
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.12"
libloading = "0.8"
once_cell = "1"
anyhow = "1"
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
rfd = "0.15"
pdf-extract = "0.7"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Threading", "Win32_System_SystemInformation"] }

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
panic = "unwind"

